testsuite/tests/properties/invalid_lambda_arg_type/all_no_index.lkt
import common

class ExampleBlock: BaseExampleBlock {
    @exported fun p(): Array[Entity[Example]] =
        node.items.all((e: Int) => e == 0)
}
